--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "unity-socketio-testserver",
+  "name": "TanksWar",
   "version": "1.0.0",
-  "description": "The SocketIO testserver for the unity3d socketio package",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "DasPeTe (daspetemail@gmail.com)",
+  "author": "AndresChMx (andreschoquemx0@gmail.com)",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
